--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -51,3 +51,9 @@
 .textarea {
     height: 15rem;
 }
+
+input {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
